=======
CHANGES
=======

0.10.1 (unreleased)
-------------------

- Fixed UnicodeDecodeError for notification event subscriber.
  [taito.horiuchi]

- updated German translation [fRiSi]

- don't show the buy/donate/cart portlet when displaying the shopping cart
  (therefore added marker view ICartView for cart related views)
  [fRiSi]

- minor changes to the checkout-review-pay step so it does not require
  credit card information to create the order.
  (see the thread
  `please review PloneGetPaid changes for a new paymentprocessor`
  on the developer list)
  [fRiSi]

- define a custom cell_formatter to be able to link orders and cart items
  in zc.table views (this fixes #292)

0.10.0 (2010-05-19)
-------------------

- Update variable amount donation portlet to avoid submitting via javascript.
  [jesses, alext]

- Update the cart formatter extra section to be rendered using a template.
  [cewing, alext]

- Added support for recurring payable items.  If upgrading from an older
  version of PloneGetPaid, you'll need to reinstall PloneGetPaid to add a new
  portlet and action.
  [jpg.rcom, davisagli, jesses, alext, cewing, larubbio]

- Added missing dependency declaration for getpaid.nullpayment.
  [davisagli]

- Added conditional imports to test files and various fixes for Plone 4
  compatibility.
  [taito.horiuchi]

- Added icon_expr to controlpanel.xml.
  [taito.horiuchi]

0.9.1 (2010-04-07)
------------------

- Added missing dependency declarations for five.intid, ore.viewlet and
  yoma.batching.
  [davisagli]

0.9.0 (2010-04-07)
------------------

- Updated templates for compatibility with Plone 4 in addition to Plone 3.
  [davisagli, azazel]

- Removed various bits of BBB code for Zope 2.9 and Plone 2.5, which have not
  been supported for a while already.
  [davisagli, azazel]

- Removed registration of the Payable object tab as a Zope 3 browser menu
  (which was BBB for Plone 2.5 and doesn't work with CMF 2.2)
  [davisagli]
