@@ -34,14 +34,14 @@ from Products.PloneGetPaid.i18n import _
 from Products.CMFPlone.utils import safe_unicode
 from Products.CMFPlone.i18nl10n import utranslate
 
-from Products.PloneGetPaid.browser.interfaces import ICartView
+from Products.PloneGetPaid.browser.interfaces import IDontShowGetPaidPortlets
 
 #################################
 # Shopping Cart Views
 
 class ShoppingCart( BrowserView ):
 
-    interface.implements(ICartView)
+    interface.implements(IDontShowGetPaidPortlets)
     _cart = None
 
     def __call__( self ):
