@@ -5,7 +5,7 @@ from plone.portlets.interfaces import IPortletDataProvider
 from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
 from Products.PloneGetPaid.browser.portlets.base import GetPaidRenderer
 from Products.PloneGetPaid.i18n import _
-from Products.PloneGetPaid.browser.interfaces import ICartView
+from Products.PloneGetPaid.browser.interfaces import IDontShowGetPaidPortlets
 
 class ICartPortlet(IPortletDataProvider):
     pass
@@ -39,5 +39,5 @@ class Renderer(base.Renderer):
         The template does some checking of its own via another browser
         view that is called.
         """
-        return not ICartView.providedBy(self.view)
+        return not IDontShowGetPaidPortlets.providedBy(self.view)
 
