@@ -11,7 +11,8 @@ CHANGES
 - updated German translation [fRiSi]
 
 - don't show the buy/donate/cart portlet when displaying the shopping cart
-  (therefore added marker view ICartView for cart related views)
+  or checkout forms
+  (therefore added marker view IDontShowGetPaidPortlets)
   [fRiSi]
 
 - minor changes to the checkout-review-pay step so it does not require
